--- a/execRecupAllAirport.ipynb
+++ b/execRecupAllAirport.ipynb
@@ -9,7 +9,7 @@
     "# PROJET Data Engineering\n",
     "Les objectifs de ce projet sont les suivants:\n",
     "\n",
-    "> *   Récuperer tous les départs et arrivées des avions de tout les aéroports sur le site flightradar.\n",
+    "> *   Récuperer tous les départs et arrivées des avions de tout les aéroports sur le site //EXEMPLE//.\n",
     "*   Récuperer la météo correspondant aux aéroports.\n",
     "*   Correler les données dans un but statistique pour évaluer l'influence de la météo et des companie sur les retards.\n",
     "*   Afficher les aéroports et les avions sur une carte \n",
@@ -109,9 +109,9 @@
     "    \"\"\"\n",
     "    currBrowser = browser\n",
     "    if dep :\n",
-    "        url = \"https://www.flightradar24.com/data/airports/\"+airport+\"/departures\"\n",
+    "        url = \"//EXEMPLE//\"+airport+\"/departures\"\n",
     "    else :\n",
-    "        url = \"https://www.flightradar24.com/data/airports/\"+airport+\"/arrivals\"\n",
+    "        url = \"//EXEMPLE//\"+airport+\"/arrivals\"\n",
     "    #si on a une erreur on reset le driver et on recommence(necessaire lorsqu'on se fait ban)\n",
     "    while(True):\n",
     "        currBrowser.get(url)\n",
@@ -302,7 +302,7 @@
     "\n",
     "\n",
     "def RecupMetarAirport(Name):\n",
-    "    urlWeather = \"https://www.flightradar24.com/data/airports/\"+Name+\"/weather\"\n",
+    "    urlWeather = \"//EXEMPLE//\"+Name+\"/weather\"\n",
     "\n",
     "    hdr = {'User-Agent': 'Mozilla/5.0'}\n",
     "    Req = urllib.request.Request(urlWeather,headers=hdr)\n",
